# context-mixer2

./: .gitignore  .hone-gates.json  AGENTS.md  CHANGELOG.md  CHARTER.md  Cargo.toml  EMBEDDING.md  SETS.md  SPEC.md  build_rs_cov.profraw  default_12225232510260763931_0_29753.profraw  default_12225232510260763931_0_29756.profraw  default_12225232510260763931_0_29758.profraw  deny.toml  install.sh  tarpaulin-report.json  tarpaulin.toml
.claude/: settings.local.json
audit/: zero-test-coverage-plan.md  (+23 more)
cmf/: Cargo.toml
cmf/src/: cli.rs  display.rs  facet.rs  facet_types.rs  lib.rs  main.rs  manifest.rs  marketplace.rs  plugin.rs  plugin_types.rs  recipe.rs  repo.rs  status.rs  test_support.rs  validate.rs  validation.rs
cmf/src/display/: facet.rs  manifest.rs  mod.rs  plugin.rs  status.rs  validation.rs
cmf/src/plugin/: mod.rs  validate.rs
cmf/tests/: cli_integration.rs
cmx/: Cargo.toml
cmx-core/: CHANGELOG.md  Cargo.toml  README.md  SPEC.md
cmx-core/conformance/: README.md
cmx-core/conformance/checksum/: manifest.json
cmx-core/conformance/frontmatter/: manifest.json
cmx-core/conformance/frontmatter/crlf-line-endings/expected/: SKILL.md
cmx-core/conformance/frontmatter/crlf-line-endings/input/: SKILL.md
cmx-core/conformance/frontmatter/empty-metadata-block/expected/: SKILL.md
cmx-core/conformance/frontmatter/empty-metadata-block/input/: SKILL.md
cmx-core/conformance/frontmatter/existing-metadata-version/expected/: SKILL.md
cmx-core/conformance/frontmatter/existing-metadata-version/input/: SKILL.md
cmx-core/conformance/frontmatter/folded-description-before-version/expected/: SKILL.md
cmx-core/conformance/frontmatter/folded-description-before-version/input/: SKILL.md
cmx-core/conformance/frontmatter/idempotent-already-reconciled/input/: SKILL.md
cmx-core/conformance/frontmatter/metadata-indent-four-spaces/expected/: SKILL.md
cmx-core/conformance/frontmatter/metadata-indent-four-spaces/input/: SKILL.md
cmx-core/conformance/frontmatter/no-fence/input/: SKILL.md
cmx-core/conformance/frontmatter/shadowing-top-level-version/expected/: SKILL.md
cmx-core/conformance/frontmatter/shadowing-top-level-version/input/: SKILL.md
cmx-core/conformance/install-e2e/: manifest.json
cmx-core/conformance/install-e2e/drifted-skip/expected/: report.json
cmx-core/conformance/install-e2e/drifted-skip/pre/tree/home/testuser/.claude/skills/fixture-tool/scripts/: tool.py
cmx-core/conformance/install-e2e/force-downgrade/expected/: report.json
cmx-core/conformance/install-e2e/force-downgrade/expected/locks/: cmx-lock.json
cmx-core/conformance/install-e2e/force-downgrade/pre/tree/home/testuser/.claude/skills/fixture-tool/: SKILL.md
cmx-core/conformance/install-e2e/fresh-install/expected/: report.json
cmx-core/conformance/install-e2e/refuse-newer/bundle/: SKILL.md
cmx-core/conformance/install-e2e/refuse-newer/expected/: report.json
cmx-core/conformance/install-e2e/refuse-newer/expected/locks/: cmx-lock.json
cmx-core/conformance/install-e2e/skip-identical/expected/: report.json
cmx-core/conformance/install-e2e/update-from-older/expected/: report.json
cmx-core/conformance/install-e2e/update-from-older/expected/tree/home/testuser/.claude/skills/fixture-tool/: SKILL.md
cmx-core/conformance/install-e2e/update-from-older/expected/tree/home/testuser/.claude/skills/fixture-tool/scripts/: tool.py
cmx-core/conformance/install-e2e/update-from-older/pre/locks/: cmx-lock.json
cmx-core/conformance/install-e2e/update-from-older/pre/tree/home/testuser/.claude/skills/fixture-tool/: SKILL.md
cmx-core/conformance/paths/: manifest.json
cmx-core/conformance/target-resolve/: manifest.json
cmx-core/conformance/version-guard/: manifest.json
cmx-core/src/: artifact_remove.rs  artifact_status.rs  checksum.rs  conformance.rs  context.rs  error.rs  error_summary.rs  frontmatter.rs  fs_util.rs  json_file.rs  lib.rs  lockfile.rs  paths.rs  platform.rs  platform_iter.rs  production.rs  skill_fs.rs  skill_install.rs  targets.rs  test_support.rs  types.rs
cmx-core/src/config/: installed.rs  mod.rs
cmx-core/src/gateway/: clock.rs  fakes.rs  filesystem.rs  git.rs  llm.rs  mod.rs  real.rs
cmx-core/src/skill_install/: apply.rs  display.rs  mod.rs  plan.rs  remove.rs  status.rs  test_support.rs  types.rs
cmx/skill/: SKILL.md
cmx/src/: adopt.rs  artifact_status.rs  checksum.rs  cli.rs  cmx_config.rs  codex_agent.rs  completions.rs  config.rs  context.rs  copy.rs  diff.rs  display.rs  doctor.rs  error.rs  flags.rs  fs_util.rs  info.rs  init.rs  install.rs  json_file.rs  lib.rs  list.rs  lockfile.rs  main.rs  outdated.rs  partition.rs  paths.rs  platform.rs  platform_copies.rs  platform_iter.rs  plugin_types.rs  promote.rs  scan.rs  scan_marketplace.rs  search.rs  sets.rs  source.rs  source_iter.rs  source_update.rs  suggestions.rs  (+6 more)
cmx/src/cli/: artifact.rs  config.rs  home.rs  mod.rs  set.rs  source.rs
cmx/src/config/: installed.rs  mod.rs
cmx/src/diff/: analyze.rs  discovery.rs  mod.rs  reconcile.rs  structural.rs
cmx/src/dispatch/: adopt.rs  artifact.rs  config.rs  diff.rs  info.rs  mod.rs  set.rs  source.rs  test_support.rs
cmx/src/display/: adopt.rs  config.rs  diff.rs  doctor.rs  info.rs  init.rs  install.rs  json.rs  list.rs  mod.rs  outdated.rs  promote.rs  search.rs  sets.rs  source.rs  sync.rs  uninstall.rs  util.rs
cmx/src/display/doctor/: json.rs  mod.rs
cmx/src/doctor/: aggregate.rs  classify.rs  divergence.rs  locations.rs  set_consistency.rs  survey.rs  tests.rs  types.rs
cmx/src/gateway/: fakes.rs  filesystem.rs  git.rs  llm.rs  real.rs
cmx/src/info/: mod.rs  summary.rs
cmx/src/install/: tests.rs
cmx/src/promote/: tests.rs
cmx/src/scan/: frontmatter.rs  mod.rs  yaml_repair.rs
cmx/src/sets/: activation.rs  members.rs  mod.rs  types.rs
cmx/src/source/: browse.rs  mod.rs
cmx/src/sync/: tests.rs
cmx/tests/: architecture_doc.rs  book_command_coverage.rs  checksum_integration.rs  completions.rs  flag_boundary.rs  json_output.rs  lockfile_integration.rs  no_anyhow_in_core.rs  real_gateway_integration.rs  scan_integration.rs
(+90 files in other folders)
