[package]
name = "cmx"
version = "2.1.0"
edition = "2024"
description = "A package manager for curated agentic context — agents and skills"
authors = ["Stacey Vetzal <stacey@vetzal.com>"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"
sha2 = "0.10.9"
chrono = "0.4.44"
tokio = { version = "1", features = ["full"] }
mojentic = { version = "1.2", features = ["full"] }

[dev-dependencies]
tempfile = "3"
