[package]
name = "cmx"
version = "2.4.0"
edition = "2024"
rust-version = "1.85"
description = "A package manager for curated agentic context — agents and skills"
authors = ["Stacey Vetzal <stacey@vetzal.com>"]
license = "MIT"

[features]
default = []
llm = ["dep:tokio", "dep:mojentic"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"
sha2 = "0.11"
chrono = "0.4.44"
tokio = { version = "1", features = ["rt"], optional = true }
mojentic = { version = "1.2", features = ["full"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# These lints produce too much noise without adding safety value for a binary crate
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
unsafe_code = "deny"
