[workspace]
members = ["cmx", "cmx-core", "cmf"]
resolver = "3"

[workspace.package]
version = "3.1.3"
edition = "2024"
rust-version = "1.85"
authors = ["Stacey Vetzal <stacey@vetzal.com>"]
license = "MIT"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# These lints produce too much noise without adding safety value for a binary crate
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
