[package]
name = "cmf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "Publisher and authoring tool for context mixer facets, recipes, and plugins"

[dependencies]
cmx = { path = "../cmx" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
