[package]
name = "cmx-core"
# Versioned independently of the cmx CLI: embedders pin this crate's API,
# which stabilizes on its own schedule. Publish via `cmx-core-v*` tags.
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Embeddable core for installing agent skills across platforms — cmx-aware lockfile tracking, plan/apply installs, version guards"
repository = "https://github.com/svetzal/context-mixer2"
readme = "README.md"
keywords = ["agent", "skills", "cli", "install", "claude"]
categories = ["development-tools", "filesystem"]

[features]
default = []
llm = ["dep:tokio", "dep:mojentic"]
test-support = []

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4.45"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["rt"], optional = true }
mojentic = { version = "1.5", features = ["full"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# These lints produce too much noise without adding safety value for a binary crate
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[lints.rust]
unsafe_code = "deny"
