[package]
name = "cmx-core"
# Versioned independently of the cmx CLI: embedders pin this crate's API,
# which stabilizes on its own schedule. Publish via `cmx-core-v*` tags.
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Embeddable core for installing agent skills across platforms — cmx-aware lockfile tracking, plan/apply installs, version guards"
repository = "https://github.com/svetzal/context-mixer2"
readme = "README.md"
keywords = ["agent", "skills", "cli", "install", "claude"]
categories = ["development-tools", "filesystem"]

[features]
default = []
llm = ["dep:tokio", "dep:mojentic"]
test-support = []

[[bin]]
name = "generate-conformance-fixtures"
path = "src/bin/generate_conformance_fixtures.rs"
required-features = ["test-support"]

[dependencies]
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
chrono = "0.4.45"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["rt"], optional = true }
mojentic = { version = "1.5", features = ["full"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
