[package]
name = "cmx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "A package manager for curated agentic context — agents and skills"

[features]
default = []
llm = ["dep:tokio", "dep:mojentic", "cmx-core/llm"]

[dependencies]
cmx-core = { path = "../cmx-core" }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
dirs = "6"
anyhow = "1"
thiserror = "2"
sha2 = "0.11"
chrono = "0.4.45"
tokio = { version = "1", features = ["rt"], optional = true }
mojentic = { version = "1.5", features = ["full"], optional = true }

[dev-dependencies]
cmx-core = { path = "../cmx-core", features = ["test-support"] }
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
